Change to UI router

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 <div layout="column" layout-fill>
     <navbar></navbar>
     <md-content layout-padding layout="column">
-        <div ng-view></div>
+        <div ui-view></div>
     </md-content>
 </div>
 
